Style changes; fill in first slide

--- a/index.html
+++ b/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Title</title>
+        <title>spaceboats GmbH final presentation</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:300,600|Roboto:300,500,300italic' rel='stylesheet' type='text/css'>
         <style type="text/css">
-            @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
-            @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
-            @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
-
-            body { font-family: 'Droid Serif'; }
-            h1, h2, h3 {
-                font-family: 'Yanone Kaffeesatz';
-                font-weight: normal;
+            body {
+                font-family: 'Roboto', sans-serif;
+                font-weight: 300;
+                line-height: 1.42857;
             }
-            .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+
+            a {
+                color: #0645ad;
+                text-decoration: none;
+            }
+
+            a:hover {
+                text-decoration: underline;
+            }
+
+            h1, h2, h3 {
+                font-weight: 500;
+            }
+
+            .remark-code, .remark-inline-code {
+                font-family: 'Source Code Pro', monospace;
+            }
         </style>
     </head>
     <body>
@@ -21,7 +34,11 @@
 
             class: center, middle
 
-            # Title
+            # busbus
+
+            <!-- note the two trailing spaces in this line create a line break. markdown is terrible -->
+            Alex Gustafson, Ian Weller, Monica Shafii, Nick Gilliland, Zane Ralston  
+            spaceboats GmbH &mdash; [spaceboats.github.io](https://spaceboats.github.io/)
 
             ---
 
