Add basic idea of presentation layout

--- a/index.html
+++ b/index.html
@@ -45,12 +45,40 @@
             # Agenda
 
             1. Introduction
-            2. Deep-dive
-            3. ...
+            2. busbus Core
+            3. Android
+            4. Web
+            5. LED Board
 
             ---
 
             # Introduction
+
+            1. Understanding the problem
+            2. The goal
+            3. Current state of busbus
+
+            ---
+
+            # busbus Core
+
+            ---
+
+            # Web
+
+            ---
+
+            # Android
+
+            1. Get static and realtime arrivals
+            2. Display closest stops on the map
+            3. Provides a good starting point for developers
+
+            # LED Board
+
+            1. Completely rewritten with Node.js
+            2. Web API
+            3. Web interface.
 
         </textarea>
         <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
