Add android video and image

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             .remark-code, .remark-inline-code {
                 font-family: 'Source Code Pro', monospace;
             }
+
         </style>
     </head>
     <body>
@@ -42,18 +43,9 @@
 
             ---
 
-            # Agenda
-
-            1. Introduction
-            2. busbus Core
-            3. Android
-            4. Web
-            5. LED Board
-
-            ---
-
             # Introduction
 
+            TODO: Change text to better text
             1. Understanding the problem
             2. The goal
             3. Current state of busbus
@@ -64,21 +56,32 @@
 
             ---
 
-            # Web
+            # Web App
 
             ---
 
-            # Android
+            # Android App
 
             1. Get static and realtime arrivals
             2. Display closest stops on the map
             3. Provides a good starting point for developers
 
+            ---
+
+            <video width="225" height="400" controls>
+                <source src="assets/androiddemo.mp4" type="video/mp4">
+            </video>
+
+            ---
+
             # LED Board
 
-            1. Completely rewritten with Node.js
-            2. Web API
-            3. Web interface.
+            1. Previously written mainly in C++ with some Python (last semester)
+            2. Has been completely rewritten with Node.js
+            3. Web API
+            4. Web interface
+
+            <img src="assets/ledboard.jpg" style="width:400px;height:200px">
 
         </textarea>
         <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
