added web bullets

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
             ---
 
             # Web App
+            1. Get static lawrance data
+            2. Allow users to filter on live and static data
+            3. Provide documenation for other developers
 
             ---
 
