added some pictures, made one picture slide

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
                 right: 4em;
             }
 
+            img {
+                width: 100%;
+                height: auto;
+            }
+
             video {
                 height: 100%;
                 width: auto;
@@ -77,6 +82,14 @@
             1. Get static lawrance data
             2. Allow users to filter on live and static data
             3. Provide documenation for other developers
+
+            ---
+
+            class: center
+
+            `$.get("http://magic-server.spaceboats.net/arrivals", { start_time: ct, end_time: ft }, function(data);`
+
+            <img src="assets/data_stream.png">
 
             ---
 
