added pictures to slideshow for web to slide show.

--- a/index.html
+++ b/index.html
@@ -79,17 +79,28 @@
             ---
 
             # Web App
-            1. Get static lawrance data
+            1. Get static Lawrence data
             2. Allow users to filter on live and static data
-            3. Provide documenation for other developers
 
             ---
 
             class: center
 
-            `$.get("http://magic-server.spaceboats.net/arrivals", { start_time: ct, end_time: ft }, function(data);`
+            `$.get("http://magic-server.spaceboats.net/arrivals", { start_time: st, end_time: et }, function(data);`
 
             <img src="assets/data_stream.png">
+
+            ---
+
+            class: center
+
+            <img src="assets/search1.png">
+
+            ---
+
+            class: center
+
+            <img src="assets/search2.png">
 
             ---
 
