Guys we can embed asciicasts now

--- a/index.html
+++ b/index.html
@@ -32,9 +32,17 @@
                 right: 4em;
             }
 
+            .contain.title {
+                top: 8em;
+            }
+
             video {
                 height: 100%;
                 width: auto;
+            }
+
+            iframe {
+                border: 0;
             }
 
             h1, h2, h3 {
@@ -70,6 +78,10 @@
             ---
 
             # busbus core
+
+            <div class="contain title center">
+                <iframe style="overflow: hidden; margin: 0px; border: 0px none; display: inline-block; width: 565px; float: none; visibility: visible; height: 421px;" allowfullscreen="true" scrolling="no" name="asciicast-iframe-2116" id="asciicast-iframe-2116" src="https://asciinema.org/api/asciicasts/2116?"></iframe>
+            </div>
 
             ---
 
