new slide 2. we ted talk now

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 position: relative;
             }
 
+            .remark-slide-content.large > p {
+                font-size: 200%;
+            }
+
             .contain {
                 position: absolute;
                 top: 1em;
@@ -73,12 +77,11 @@
 
             ---
 
-            # Introduction
+            class: center, middle, large
 
-            TODO: Change text to better text
-            1. Understanding the problem
-            2. The goal
-            3. Current state of busbus
+            **busbus** is a platform to  
+            help developers build applications  
+            with public transit data
 
             ---
 
