Fix and add stuff

--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
                 height: auto;
             }
 
+            img.vert {
+                height: 100%;
+                width: auto;
+            }
+
+            #androidcrash {
+                height: 100%;
+                width: auto;
+            }
+
             video {
                 height: 100%;
                 width: auto;
@@ -95,7 +105,7 @@
 
             ---
 
-            class: center
+            # Web App
 
             `$.get("http://magic-server.spaceboats.net/arrivals", { start_time: st, end_time: et }, function(data);`
 
@@ -103,23 +113,21 @@
 
             ---
 
-            class: center
+            # Web App
 
             <img src="assets/search1.png">
 
             ---
 
-            class: center
+            # Web App
 
             <img src="assets/search2.png">
 
             ---
 
-            # Android App
+            class: center, middle, large
 
-            1. Get static and realtime arrivals
-            2. Display closest stops on the map
-            3. Provides a good starting point for developers
+            # Android App
 
             ---
 
@@ -138,9 +146,36 @@
             1. Previously written mainly in C++ with some Python (last semester)
             2. Has been completely rewritten with Node.js
             3. Web API
-            4. Web interface
+            4. Web App
 
             <img src="assets/ledboard.jpg" style="width:400px;height:200px">
+
+            ---
+
+            # LED Board API
+
+            ---
+
+            # LED Board Web App
+
+            ---
+
+            # Questions?
+
+            Here are some if you forgot yours:
+
+            1. Are you done with busbus?
+            1. What is going to happen to the LED board?
+            1. Why are you focusing on developers and not end users?
+            1. Why did you put a bunch of questions here instead of talking about them already?
+
+            ---
+
+            class: center
+
+            <div class="contain">
+                <img src="assets/androidcrash.png" class="vert">
+            </div>
 
         </textarea>
         <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
