--- a/index.html
+++ b/index.html
@@ -131,8 +131,6 @@
 
             ---
 
-            class: center
-
             <div class="contain">
                 <video controls>
                     <source src="assets/androiddemo.mp4" type="video/mp4">
@@ -157,6 +155,9 @@
             ---
 
             # LED Board Web App
+
+
+            <img src="assets/ledboard_webapp.png">
 
             ---
 
