is this a video

--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
 
             ---
 
+            class: center
+
             <div class="contain">
                 <video controls>
                     <source src="assets/androiddemo.mp4" type="video/mp4">
