--- a/index.html
+++ b/index.html
@@ -154,6 +154,12 @@
 
             # LED Board API
 
+            ```
+            "http://3001-ledboard.spaceboats.net/insert \
+                {type: "text", namespace: "EECS 581",
+                text: "Senior Design", color: "#ffffff"}
+            ```
+
             ---
 
             # LED Board Web App
