--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
 
             .remark-slide-content {
                 position: relative;
+                font-size: 24px;
+            }
+
+            .remark-slide-content h1 {
+                font-size: 64px;
+                margin: .5em 0;
+            }
+
+            .remark-slide-content p, .remark-slide-content li {
+                font-size: 125%;
             }
 
             .remark-slide-content.large > p {
@@ -82,7 +92,8 @@
             # busbus
 
             <!-- note the two trailing spaces in this line create a line break. markdown is terrible -->
-            Alex Gustafson, Ian Weller, Monica Shafii, Nick Gilliland, Zane Ralston  
+            Alex Gustafson, Ian Weller,  
+            Monica Shafii, Nick Gilliland, Zane Ralston  
             spaceboats GmbH &mdash; [spaceboats.github.io](https://spaceboats.github.io/)
 
             ---
