--- a/index.html
+++ b/index.html
@@ -125,6 +125,12 @@
 
             ---
 
+            # Web App
+
+            <img src="assets/search3.png">
+
+            ---
+
             class: center, middle, large
 
             # Android App
